@@ -49,8 +49,8 @@ pandas = ["pint-pandas >= 0.3"]
 xarray = ["xarray"]
 # Impose Dask < 2025.3.0, otherwise it causes "RuntimeError: Attempting to use an asynchronous Client in a synchronous context of `dask.compute`" (see Issue #1016 in Dask).
 dask = ["dask < 2025.3.0"]
-# Only install mip if Python is less than 3.12, otherwise it causes "Windows fatal exception: access violation" (see Issue #2121).
-mip = ["mip >= 1.13; python_version < '3.12'"]
+# Install of mip crashes from Python 3.13 due to cffi dependency issue (see https://github.com/python-cffi/cffi/issues/48 and https://stackoverflow.com/questions/79463080/building-wheel-for-cffi-fails-when-installing-python-mip)
+mip = ["mip >= 1.13; python_version < '3.13'"]
 matplotlib = ["matplotlib"]
 all = [
   "pint[numpy,uncertainties,babel,pandas,pandas,xarray,dask,mip,matplotlib]",
