@@ -1,8 +1,8 @@
 sphinx<8
 ipython<=8.12
 matplotlib
-# Only install mip if Python is less than 3.12, otherwise it causes "Windows fatal exception: access violation" (see Issue #2121).
-mip>=1.13; python_version < '3.12'
+# Install of mip crashes from Python 3.13 due to cffi dependency issue (see https://github.com/python-cffi/cffi/issues/48 and https://stackoverflow.com/questions/79463080/building-wheel-for-cffi-fails-when-installing-python-mip)
+mip>=1.13; python_version < '3.13'
 nbsphinx
 numpy
 pytest
